--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@faker-js/faker": "8.3.1",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
+    "@heroicons/react": "^2.2.0",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
@@ -24,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
+    "react-intersection-observer": "^9.13.1",
     "stripe": "11.15.0",
     "tailwind-merge": "^2.2.1",
     "vanilla-cookieconsent": "^3.0.1",
